lab1-dxsetup/dx-haproxy-route.yaml
# ------------------------------------------------------------
# HCL Digital Experience - OpenShift Route (TLS passthrough)
# Basado en documentación oficial HCL DX 9.5 CF231
# https://help.hcl-software.com/digital-experience/9.5/CF231/
# ------------------------------------------------------------

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dx-haproxy-route
  namespace: digital-experience
  annotations:
    # By default, OpenShift applies load balancing and sticky sname: "<helm-deployment-name>-passthrough"
  name: "dx-deployment-passthrough"
spec:
  # ----------------------------------------------------------
  # FQDN EXTERNO DE LA PLATAFORMA DX
  # Debe coincidir con tu dominio público
  # ----------------------------------------------------------
  host: dx.apps.promox.europesip-lab.com
  port:
    targetPort: "haproxy"

  # ----------------------------------------------------------
  # Servicio backend que expone HAProxy de DX
  # ----------------------------------------------------------
  to:
    kind: Service
    name: dx-deployment-haproxy
    weight: 100

  # ----------------------------------------------------------
  # TLS passthrough:
  # - El TLS se termina en HAProxy (NO en OpenShift)
  # - Requiere que HAProxy tenga HTTPS REAL
  # ----------------------------------------------------------
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
